--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,11 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/flask
+app/Scripts/activate
+app/Scripts/activate.bat
+app/Scripts/activate
+app/Scripts/activate.bat
+app/Scripts/pip.exe
+app/Scripts/pip3.10.exe
+app/Scripts/pip3.exe
+app/pyvenv.cfg
