--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,10 @@ app/Scripts/pip.exe
 app/Scripts/pip3.10.exe
 app/Scripts/pip3.exe
 app/pyvenv.cfg
+app/Scripts/flask.exe
+app/Scripts/normalizer.exe
+app/Scripts/pip.exe
+app/Scripts/pip3.exe
+app/Scripts/normalizer.exe
+app/Scripts/pip.exe
+app/Scripts/pip3.exe
