--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,9 @@ app/Scripts/normalizer.exe
 app/Scripts/pip.exe
 app/Scripts/pip3.10.exe
 app/Scripts/pip3.exe
+app/pyvenv.cfg
+app/Scripts/activate
+app/Scripts/activate.bat
+app/Scripts/pip.exe
+app/Scripts/pip3.10.exe
+app/Scripts/pip3.exe
