--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ app/Scripts/activate.bat
 app/Scripts/pip.exe
 app/Scripts/pip3.10.exe
 app/Scripts/pip3.exe
+app/Scripts/flask.exe
+app/Scripts/normalizer.exe
