--- a/.gitignore
+++ b/.gitignore
@@ -168,30 +168,4 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/flask
-app/Scripts/activate
-app/Scripts/activate.bat
-app/Scripts/activate
-app/Scripts/activate.bat
-app/Scripts/pip.exe
-app/Scripts/pip3.10.exe
-app/Scripts/pip3.exe
-app/pyvenv.cfg
-app/Scripts/flask.exe
-app/Scripts/normalizer.exe
-app/Scripts/flask.exe
-app/pyvenv.cfg
-app/Scripts/activate
-app/Scripts/activate.bat
-app/pyvenv.cfg
-app/pyvenv.cfg
-app/Scripts/activate
-app/Scripts/activate.bat
-app/Scripts/flask.exe
-app/Scripts/normalizer.exe
-app/Scripts/pip.exe
-app/Scripts/pip3.10.exe
-app/Scripts/pip3.exe
-app/Scripts/flask.exe
-app/Scripts/normalizer.exe
-app/Scripts/pip.exe
-app/Scripts/pip3.exe
+Scripts
